# autodroid

./: .gitignore  AGENT.md  Cross-Platform-Android-App-Automation-Container-Solution.md  NetworkService-Enhancement-Design.md  README.md  UPDATES.md  WORKSCRIPT_ENGINE_IMPROVEMENTS.md  WORKSCRIPT_ENGINE_SUMMARY.md  appendix.md  appium-data-flow.md  architecture.md  autodroid-app.code-workspace  force-reimport.js  generated_home.xml  implementation-plan.md  installation-guide.md  push-to-all.bat  push-to-all.sh  refresh-java-server.bat  requirements.md  technical-solution.md  test_appium.py  test_appium_capabilities.py  test_appium_capabilities_fixed.py  test_capabilities.json  test_capabilities_direct.py  test_connection.kt  test_push.txt  usage-guide.md  跨平台安卓应用自动化容器解决方案.md
autodroid-analyzer/: .gitignore  DESIGN.md  README.md  build_exe.bat  build_exe.py  config.py  config.yaml  pyproject.toml  run_analysis.py  run_server.py  start_server.bat  stitch_screenshots.py  stitch_screenshots.spec
autodroid-analyzer/api/: __init__.py  analysis.py  apks.py  devices.py  main.py  models.py  server.py
autodroid-analyzer/core/: __init__.py
autodroid-analyzer/core/analysis/: __init__.py  analysis_utils.py  app_analyzer.py  database.py  human_assistant.py  interactive_analyzer.py  models.py  multimodal_recognizer.py  navigation_system.py
autodroid-analyzer/core/apk/: --help_packer_analysis.json  APK加固检测指南.md  README.md  __init__.py  apk_packer_detector.py  database.py  list_apks.py  models.py  service.py  test_device_detection.py
autodroid-analyzer/core/database/: __init__.py  base.py  models.py
autodroid-analyzer/core/device/: __init__.py  database.py  models.py  monitor.py  service.py  wifi_debug.py  无线调试使用指南.md
autodroid-analyzer/core/screenshot/: __init__.py  database.py  models.py  page_analyzer.py  page_recognizer.py  screenshot_manager.py  service.py
autodroid-analyzer/core/useroperation/: __init__.py  database.py  models.py  monitoring_system.py  operation_recorder.py  service.py  user_operation.py  user_operation_manager.py
autodroid-analyzer/editor/: __init__.py
autodroid-analyzer/editor/api/: analyzer.db  main.py
autodroid-analyzer/editor/frontend/: package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.js
autodroid-analyzer/frontend/: package-lock.json  package.json  postcss.config.js  svelte.config.js  svelte.config.ts  tailwind.config.js  vite.config.ts
autodroid-analyzer/frontend/src/: app.css
autodroid-analyzer/tests/functional/: test_analyzer.py  test_apk_module.py  test_device_connection.py  test_device_detection_simple.py  test_modules.py  test_wireless_debugging.py
autodroid-analyzer/tests/integration/: test_api_endpoints.py  test_api_requests.py  test_apk_lister.py  test_autodroid_manager.py  test_database.py  (+1 more)
autodroid-container/: .gitignore  DESIGN.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  run_server.py  start.py  start_server.bat
autodroid-container/api/: apks.py  auth.py  devices.py  main.py  mdns.py  models.py  server.py  workflows.py  workscripts.py
autodroid-container/core/: engine.py  workscript.py
autodroid-container/frontend/: config.yaml  package.json  svelte.config.ts  vite.config.ts
autodroid-container/tests/: diagnose_apk_registration.py  test_edge_cases.py  test_mdns_discovery.py  test_network.py  test_unified_apk_api.py  test_user_id_generation.py
autodroid-container/workscripts/: DIRECTORY_STRUCTURE.md  Dockerfile  README.md  WORKSCRIPT_SPECIFICATION.md  adapters.py  autodroid_agent.py  autoglm_workscript.py  current_ui.xml  debug_ui.py  intelligent_agent.py  intelligent_apk_tester.py  model_config.py  sample-workscript.yml  simple_test.py  test_autodroid_agent.py  test_device_connection.py
autodroid-trader-server/: .gitignore  Dockerfile  README.md  check_app_installed.py  config.yaml  docker-compose.yml  migrate_db.py  pyproject.toml  pytest.ini  rename_fields.py
autodroid-trader-server/api/: apks.py  auth.py  devices.py  main.py  mdns.py  models.py  server.py  tradeplans.py  tradescripts.py
autodroid-trader-server/core/: engine.py  test.py  workscript.py
autodroid-trader-server/docs/: DESIGN.md  FEATURES.md
autodroid-trader-server/frontend/: config.yaml  package.json  svelte.config.ts
autodroid-trader-server/tests/: debug_device_apk.py  generate_tradeplan_test_data_via_api.py  generate_tradescript_test_data_via_api.py  test_api_response.py  test_device_apps.py  test_device_registration.py  test_edge_cases.py  test_unified_apk_api.py  test_user_id_generation.py
autodroid-trader-server/workscripts/: .gitignore  Dockerfile  README.md  WORKSCRIPTS_ENGINE_DESIGN.md  WORKSCRIPT_SPECIFICATION.md  adb_device.py  config.py  coordinate_mapper.py  debug_ui.py  device_connection.py  ui_definitions.py
(+671 files in other folders)
