[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autodroid-container"
version = "1.0.0"
description = "Autodroid Android Automation System Container"
authors = [{ name = "Autodroid Team" }]
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-dotenv==1.0.0",
    "pydantic==2.5.2",
    "pydantic-settings==2.1.0",
    "appium-python-client==2.11.1",
    "alembic==1.13.1",
    "python-multipart==0.0.6",
    "pyyaml==6.0.1",
    "requests==2.31.0",
    "psutil==5.9.8",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "zeroconf==0.111.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "sqlalchemy==2.0.25",
    "aiosqlite==0.19.0"
]
[project.scripts]
autodroid-server = "api.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
reload = true
log-level = "info"