[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autodroid-trader-server"
version = "1.0.0"
description = "Autodroid Android Automation System Container"
authors = [{ name = "Autodroid Team" }]
requires-python = ">=3.10"
dependencies = [
    # Web框架
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "python-multipart==0.0.6",

    # 数据验证和配置
    "pydantic==2.5.2",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",

    # 数据库
    "peewee==3.17.1",

    # 网络服务
    "requests==2.31.0",
    "zeroconf==0.111.0",

    # 认证和安全
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",

    # 系统工具
    "psutil==5.9.8",
    "qrcode[pil]==7.4.2",
    "pyyaml==6.0.1",

    # 测试框架
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",

    # Appium 自动化测试
    "appium-python-client==2.11.1",

]
[project.scripts]
autodroid-server = "api.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uvicorn]
host = "0.0.0.0"
port = 8003
reload = true
log-level = "info"
